[gd_scene load_steps=10 format=3 uid="uid://bdio5n87rp04y"]

[ext_resource type="Script" path="res://ui/card_selection/card_selection_panel.gd" id="1_6y3uu"]
[ext_resource type="PackedScene" uid="uid://bm842h44ddm1c" path="res://ui/card/card.tscn" id="2_8af0g"]
[ext_resource type="Resource" uid="uid://bb2t6k7708afk" path="res://resources/infos/fishs/guppy.tres" id="2_xyj5q"]
[ext_resource type="Resource" uid="uid://dns5p2u2gr11r" path="res://resources/infos/fishs/spun.tres" id="3_jwacy"]
[ext_resource type="Texture2D" uid="uid://je2h1me15g7i" path="res://assets/art/ui/validate_button.png" id="5_f5y2e"]
[ext_resource type="Texture2D" uid="uid://07cotckfaw41" path="res://assets/art/ui/validate_button_pressed.png" id="6_fln28"]
[ext_resource type="Texture2D" uid="uid://tary6amewksl" path="res://assets/art/ui/reroll_button.png" id="7_toxlg"]
[ext_resource type="Texture2D" uid="uid://bpfv7uhaltxur" path="res://assets/art/ui/reroll_button_pressed.png" id="8_ancnu"]
[ext_resource type="Texture2D" uid="uid://c2bskovklntwr" path="res://assets/art/ui/reroll_button_disabled.png" id="9_8b8u8"]

[node name="CardSelectionPanel" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6y3uu")
default_selection = Array[Resource("res://resources/infos/entity_infos.gd")]([ExtResource("2_xyj5q"), ExtResource("2_xyj5q"), ExtResource("3_jwacy")])
card_scene = ExtResource("2_8af0g")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="CardsDisplay" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 40

[node name="Card" parent="CenterContainer/VBoxContainer/CardsDisplay" instance_placeholder="res://ui/card/card.tscn"]
layout_mode = 2

[node name="Card2" parent="CenterContainer/VBoxContainer/CardsDisplay" instance_placeholder="res://ui/card/card.tscn"]
layout_mode = 2

[node name="Card3" parent="CenterContainer/VBoxContainer/CardsDisplay" instance_placeholder="res://ui/card/card.tscn"]
layout_mode = 2

[node name="Card4" parent="CenterContainer/VBoxContainer/CardsDisplay" instance_placeholder="res://ui/card/card.tscn"]
layout_mode = 2

[node name="Card5" parent="CenterContainer/VBoxContainer/CardsDisplay" instance_placeholder="res://ui/card/card.tscn"]
layout_mode = 2

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="PickInstructionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Pick 2 cards"
horizontal_alignment = 1

[node name="Control2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ValidateButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("5_f5y2e")
texture_pressed = ExtResource("6_fln28")
texture_hover = ExtResource("5_f5y2e")

[node name="RerollButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("7_toxlg")
texture_pressed = ExtResource("8_ancnu")
texture_hover = ExtResource("7_toxlg")
texture_disabled = ExtResource("9_8b8u8")
